test-cases/valid/reject/bad_array_assignment_type.ul
void main() {
    int[1] i;
    i[0] = 'c'; // Can't assign char to int 
}
